Added config support

--- a/ExcelDataLoader/ExcelDataLoader.csproj
+++ b/ExcelDataLoader/ExcelDataLoader.csproj
@@ -16,7 +16,14 @@
 
   <ItemGroup>
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="ini-parser" Version="2.5.2" />
     <PackageReference Include="MySql.Data" Version="8.0.30" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="config.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
